AMP & FP16 training 1. automic mix precision training supported 2. fp16 training supported 3. bert pretraining completed 4. dataloader bug fixed 5. experimental partition method autopipe added 6. minor bug fixed

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 events.out.tfevents*
 model.ckpt*
 *.pbtxt
+*.pt
 checkpoint
 eval
 weight-decay
@@ -41,6 +42,8 @@ tensorboard
 *.out
 *.txt
 *.eps
+*.json
+*.onnx
 
 # shell script
 *.sh
